# study-collisions-icub

./: CMakeLists.txt  README.md
matlab/: plot_collisions.m
models/collisionDetector/: collisionDetector.ini
models/collisions_model/: CMakeLists.txt  collisionDetector-world.world  model.config
models/collisions_model/iCubGazeboV2_5_collisions/: README.md  collisions_model_iCubGazeboV2_5.sdf  model.config
models/collisions_model/iCubGazeboV3_collisions/: README.md  model.config  model.urdf
models/collisions_model/simmechanics/: sim_icub3_r_upperarm_prt.stl  sim_icub3_r_upperarm_skintest_prt.stl
models/collisions_model/world/: collision_world_iCubGazeboV2_5.world  collision_world_iCubGazeboV3.world
modules/: CMakeLists.txt
modules/collisionPlugin/: CMakeCache.txt  CMakeLists.txt
modules/collisionPlugin/include/: collisionPlugin.hh
modules/collisionPlugin/src/: collisionPlugin.cc
modules/jointSpaceIterator/: CMakeLists.txt
modules/jointSpaceIterator/include/: jointSpaceIterator.hpp
modules/jointSpaceIterator/src/: jointSpaceIterator.cpp
worlds/: collisionDetector-world.world
